# mac-vlc

./: README.md  package.json  setup.cfg  setup.py
scripts/: .vlc-duration.applescript  .vlc-fullscreen-detect.applescript  .vlc-fullscreen-enter.applescript  .vlc-fullscreen-exit.applescript  .vlc-open.applescript  .vlc-path.applescript  .vlc-pause.applescript  .vlc-play.applescript  .vlc-playing.applescript  .vlc-time.applescript  .vlc-volume.applescript  vlc  vlc-duration  vlc-frontmost  vlc-fullscreen-detect  vlc-fullscreen-exit  vlc-kill  vlc-open  vlc-pause  vlc-pid  vlc-play  vlc-playing  vlc-volume
tests/mac-vlc/examples/duration/: duration.sh
tests/mac-vlc/examples/fullscreen/: detect.sh  enter.sh  exit.sh
tests/mac-vlc/examples/path/: path.sh
tests/mac-vlc/examples/pause/: pause.sh
tests/mac-vlc/examples/pid/: pid.sh
tests/mac-vlc/examples/play/: play.sh
tests/mac-vlc/examples/playing/: playing.sh
tests/mac-vlc/examples/time/: time.sh
tests/mac-vlc/examples/volume/: volume.sh
