# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-vlc
version = 2019.4.13
url = https://github.com/looking-for-a-job/mac-vlc
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = vlc

[options]
install_requires = 
	setuptools
scripts = 
	scripts/.vlc-duration.applescript
	scripts/.vlc-fullscreen-detect.applescript
	scripts/.vlc-fullscreen-enter.applescript
	scripts/.vlc-fullscreen-exit.applescript
	scripts/.vlc-open.applescript
	scripts/.vlc-path.applescript
	scripts/.vlc-pause.applescript
	scripts/.vlc-play.applescript
	scripts/.vlc-playing.applescript
	scripts/.vlc-time.applescript
	scripts/.vlc-volume.applescript
	scripts/vlc
	scripts/vlc-duration
	scripts/vlc-fullscreen-detect
	scripts/vlc-fullscreen-enter
	scripts/vlc-fullscreen-exit
	scripts/vlc-kill
	scripts/vlc-open
	scripts/vlc-path
	scripts/vlc-pause
	scripts/vlc-pid
	scripts/vlc-play
	scripts/vlc-playing
	scripts/vlc-time
	scripts/vlc-volume
